hphp/hack/test/typecheck/reactive/reassign_in_foreach4.php.exp
File "reassign_in_foreach4.php", line 11, characters 24-25:
Cannot assign immutable value to mutably-owned local variable. Mutability flavor of local variable cannot be altered. (Typing[4294])
